main:added listing of the user bookings
